# qtils

./: .clang-format  .gitignore  CMakeLists.txt  NEWS.md  README.md
cmake/: config.cmake  macros.cmake  qtils-config-dependencies.cmake.in  qtils-config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
include/: config.h  config.h.in
include/qtils/: config.h  config.h.in
include/qtils/action/: action.h  export.h
include/qtils/color/: color.h  export.h
include/qtils/container/: export.h  hash.h  map.h
include/qtils/delegate/: conditional_bold_delegate.h  export.h  icon_check_delegate.h
include/qtils/dialog/: dialog_with_toggle_view.h  dialog_with_url_links.h  export.h  extended_file_dialog.h
include/qtils/dpi/: dpi.h  export.h
include/qtils/file_system/: export.h  file_system_proxy_model.h  file_system_watcher.h
include/qtils/line_edit/: dir_browser_line_edit.h  export.h  file_browser_line_edit.h  line_edit_with_history.h
include/qtils/model/: cast.h  export.h  leaf_filter_proxy_model.h  reverse_proxy_model.h
include/qtils/pointer/: export.h  lazy_ptr.h  unique_ptr_cast.h
include/qtils/property_browser/: button_property_browser.h  editor_factory.h  export.h  group_box_property_browser.h  property_browser.h  property_manager.h  tree_property_browser.h  variant_property.h
include/qtils/serializer/: archive.h  archive_property.h  base_serialization.h  concept.h  export.h  json_archive.h  serializable.h
include/qtils/stacked_widget/: export.h  stacked_widget.h  stacked_widget_label.h  stacked_widget_tree_delegate.h  stacked_widget_tree_model.h
include/qtils/view/: concept.h  export.h  mouse_over_selectable_view.h  unselectable_view.h
include/qtils/widget/: color_picker.h  export.h  name_and_path_filler.h  shortcut_selector.h
resources/qtils/line_edit/: line_edit.qrc
resources/qtils/stacked_widget/: stacked_widget.qrc
src/: CMakeLists.txt
src/qtils/: CMakeLists.txt
src/qtils/action/: CMakeLists.txt  action.cpp
src/qtils/color/: CMakeLists.txt  color.cpp
src/qtils/container/: CMakeLists.txt
src/qtils/delegate/: CMakeLists.txt  conditional_bold_delegate.cpp  icon_check_delegate.cpp
src/qtils/dialog/: CMakeLists.txt  dialog_with_toggle_view.cpp  extended_file_dialog.cpp
src/qtils/dpi/: CMakeLists.txt  dpi.cpp
src/qtils/file_system/: CMakeLists.txt  file_system_proxy_model.cpp  file_system_watcher.cpp
src/qtils/line_edit/: CMakeLists.txt  dir_browser_line_edit.cpp  file_browser_line_edit.cpp  line_edit_with_history.cpp
src/qtils/model/: CMakeLists.txt  cast.cpp  leaf_filter_proxy_model.cpp  reverse_proxy_model.cpp
src/qtils/pointer/: CMakeLists.txt
src/qtils/property_browser/: CMakeLists.txt  button_property_browser.cpp  editor_factory.cpp  group_box_property_browser.cpp  property_browser.cpp  property_browser_utils.cpp  property_manager.cpp  tree_property_browser.cpp  variant_property.cpp
src/qtils/property_browser/priv/: property_browser_utils_p.h
src/qtils/serializer/: CMakeLists.txt  base_serialization.cpp  json_archive.cpp  serializable.cpp
src/qtils/serializer/priv/: json_archive_p.h
src/qtils/stacked_widget/: CMakeLists.txt  stacked_widget.cpp  stacked_widget_label.cpp  stacked_widget_tree_delegate.cpp  stacked_widget_tree_model.cpp
src/qtils/view/: CMakeLists.txt
src/qtils/widget/: CMakeLists.txt  color_picker.cpp  name_and_path_filler.cpp  shortcut_selector.cpp
tests/: CMakeLists.txt
uis/qtils/stacked_widget/: stacked_widget_label.ui
uis/qtils/widget/: name_and_path_filler.ui
