# ----------------------------------------------------------------------- #
# -------------------- Set CMake version and project -------------------- #
# ----------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
project(
  QTILS
  VERSION 0.1.0
  LANGUAGES CXX)
# ----------------------------------------------------------------------- #
# ------------------------ Include config and macros -------------------- #
# ----------------------------------------------------------------------- #
include(${QTILS_SOURCE_DIR}/cmake/config.cmake)
include(${QTILS_SOURCE_DIR}/cmake/macros.cmake)
# ----------------------------------------------------------------------- #
# ---------------------------- Add subdirectories ----------------------- #
# ----------------------------------------------------------------------- #
add_subdirectory(deps)
add_subdirectory(src)

if(QTILS_BUILD_TEST)
  add_subdirectory(tests)
endif()

add_subdirectory(docs)
# ----------------------------------------------------------------------- #
# ------------------------------- Final steps --------------------------- #
# ----------------------------------------------------------------------- #
qtils_export_modules()
qtils_static_analyzers()
# ----------------------------------------------------------------------- #
