# ----------------------------------------------------------------------- #
# ---------------------------- Set CMake Version ------------------------ #
# ----------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# ----------------------------------------------------------------------- #
# ---------------------------- Generate headers ------------------------- #
# ----------------------------------------------------------------------- #
set(include_root ${QTILS_SOURCE_DIR}/include/qtils)
configure_file(${include_root}/config.h.in ${include_root}/config.h)
# ----------------------------------------------------------------------- #
# --------------------------- Add subdirectories ------------------------ #
# ----------------------------------------------------------------------- #
add_subdirectory(qtils)
# ----------------------------------------------------------------------- #
