# ----------------------------------------------------------------------- #
# ---------------------------- Set CMake Version ------------------------ #
# ----------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.11)
# ----------------------------------------------------------------------- #
# --------------------------- Add subdirectories ------------------------ #
# ----------------------------------------------------------------------- #
add_subdirectory(pointer)
add_subdirectory(container)
add_subdirectory(action)
add_subdirectory(color)
add_subdirectory(dialog)
add_subdirectory(dpi)
add_subdirectory(file_system)
add_subdirectory(line_edit)
add_subdirectory(property_browser)
add_subdirectory(view)
add_subdirectory(widget)
add_subdirectory(stacked_widget)
add_subdirectory(model)
add_subdirectory(delegate)
add_subdirectory(serializer)
# ----------------------------------------------------------------------- #
